hphp/test/slow/traits/requireclass/requireclass_generic_01.bad.php.expectf
Fatal error: Require class cannot be used with a generic class in %s/requireclass_generic_01.bad.php on line 7
